# python-template

./: Makefile  Pipfile  README.md  pyproject.toml  setup.cfg
.circleci/: config.yml
