[metadata]
name = project
version = 0.1.0
author = Scott Chase Waggener
description = Template repository for python projects
url = "https://github.com/TidalPaladin/python-template"
keywords = template
license_file = LICENSE

[options]
python_requires = >=3.7
packages = find:
# NOTE: Suffix git url with #egg=package_name to avoid multiple installs
install_requires = 
    numpy
    # Git url
    # project @ git+https://github.com/url/repo.git#egg=project

[options.extras_require]
test = 
  pytest
  pytest-mock
  pytest-cov
  coverage
quality = 
  autoflake
  autopep8
  black
  flake8
  isort

[pycodestyle]
max-line-length = 120

# Create CLI entry points
#[options.entry_points]
#console_scripts =
#  scriptname = project.__main__:entrypoint
